Migrerer til kotlinLogging og sanitering i logg